// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`radioField > should render correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir933p"
      >
        <fieldset
          class="uv_xfvkod0"
        >
          <div
            class="uv_mxir930 uv_mxir932d uv_mxir935p"
          >
            <div
              class="uv_mxir930 uv_mxir932d uv_mxir935j"
            >
              <legend
                class="uv_f32sl0 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
              >
                Label
              </legend>
            </div>
            <div
              class="uv_mxir930 uv_mxir93v uv_mxir932d uv_mxir933p"
            >
              <div
                class="uv_bnlb220 uv_mxir930 uv_mxir932d uv_mxir935j"
              >
                <div
                  aria-disabled="false"
                  class="uv_bnlb224 uv_bnlb222"
                  data-checked="false"
                  data-invalid="false"
                >
                  <input
                    aria-disabled="false"
                    class="uv_bnlb22a"
                    id="_r_3_"
                    name="radio"
                    type="radio"
                    value="value-1"
                  />
                  <svg
                    class="uv_bnlb22b"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      radio
                    </title>
                    <g>
                      <circle
                        class="uv_bnlb22e"
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="6"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="uv_bnlb22d"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="uv_bnlb22c"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="uv_bnlb227 uv_bnlb225 uv_bnlb228 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                    for="_r_3_"
                  >
                    Radio 1
                  </label>
                </div>
              </div>
              <div
                class="uv_bnlb220 uv_mxir930 uv_mxir932d uv_mxir935j"
              >
                <div
                  aria-disabled="false"
                  class="uv_bnlb224 uv_bnlb222"
                  data-checked="true"
                  data-invalid="false"
                >
                  <input
                    aria-disabled="false"
                    class="uv_bnlb22a"
                    id="_r_9_"
                    name="radio"
                    type="radio"
                    value="value-2"
                  />
                  <svg
                    class="uv_bnlb22b"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      radio
                    </title>
                    <g>
                      <circle
                        class="uv_bnlb22e"
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="6"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="uv_bnlb22d"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="uv_bnlb22c"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="uv_bnlb227 uv_bnlb225 uv_bnlb228 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                    for="_r_9_"
                  >
                    Radio 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`radioField > should trigger events correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir933p"
      >
        <fieldset
          class="uv_xfvkod0"
        >
          <div
            class="uv_mxir930 uv_mxir932d uv_mxir935p"
          >
            <div
              class="uv_mxir930 uv_mxir932d uv_mxir935j"
            >
              <legend
                class="uv_f32sl0 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
              >
                RadioGroupField events
              </legend>
            </div>
            <div
              class="uv_mxir930 uv_mxir93v uv_mxir932d uv_mxir933p"
            >
              <div
                class="uv_bnlb220 uv_mxir930 uv_mxir932d uv_mxir935j"
              >
                <div
                  aria-disabled="false"
                  class="uv_bnlb224 uv_bnlb222"
                  data-checked="true"
                  data-invalid="false"
                >
                  <input
                    aria-disabled="false"
                    class="uv_bnlb22a"
                    id="_r_i_"
                    name="test"
                    type="radio"
                    value="value-1"
                  />
                  <svg
                    class="uv_bnlb22b"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      radio
                    </title>
                    <g>
                      <circle
                        class="uv_bnlb22e"
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="6"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="uv_bnlb22d"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="uv_bnlb22c"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="uv_bnlb227 uv_bnlb225 uv_bnlb228 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                    for="_r_i_"
                  >
                    Radio 1
                  </label>
                </div>
              </div>
              <div
                class="uv_bnlb220 uv_mxir930 uv_mxir932d uv_mxir935j"
              >
                <div
                  aria-disabled="false"
                  class="uv_bnlb224 uv_bnlb222"
                  data-checked="false"
                  data-invalid="false"
                >
                  <input
                    aria-disabled="false"
                    class="uv_bnlb22a"
                    id="_r_o_"
                    name="test"
                    type="radio"
                    value="value-2"
                  />
                  <svg
                    class="uv_bnlb22b"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      radio
                    </title>
                    <g>
                      <circle
                        class="uv_bnlb22e"
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="6"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="uv_bnlb22d"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="uv_bnlb22c"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="uv_bnlb227 uv_bnlb225 uv_bnlb228 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                    for="_r_o_"
                  >
                    Radio 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
